Adjust text alignment resolves issue #220

--- a/css/scroll.css
+++ b/css/scroll.css
@@ -280,7 +280,7 @@
 }
 
 .carl-indicators li {
-  border: 4px solid #4acae8;
+  border: 5px solid #4acae8;
   background-color: #232959;
   border-radius: 10px;
   width: 160px;
@@ -288,10 +288,10 @@
 }
 
 .carl-indicators li.active {
-    border: 9px solid #abdcf0;
+    border: 5px solid #abdcf0;
     border-radius: 10px;
-    width: 165px;
-    height: 150px;
+    width: 160px;
+    height: 133px;
     z-index: 1; /* Increase the z-index to bring it to the front */
       position: relative; /* Add position relative to allow z-index to work */
 }
